# blender

./: .gitignore  .gitmodules  CMakeLists.txt  p1.rej  vpaint.txt  OBOA  OBOA.pub
build_files/build_environment/: install_deps.sh
build_files/buildbot/: slave_compile.py
build_files/buildbot/config/: blender_linux.cmake  blender_mac.cmake
build_files/cmake/: macros.cmake
build_files/cmake/Modules/: FindALEMBIC.cmake  FindAlembic.cmake  FindHDF5.cmake  FindHIDAPI.cmake  FindOpenJPEG.cmake
build_files/cmake/config/: blender_full.cmake
build_files/cmake/platform/: platform_apple.cmake  platform_unix.cmake  platform_win32_msvc.cmake
doc/doxygen/: doxygen.source.h
doc/python_api/examples/: bge.texture.2.py
doc/python_api/rst/: bge.texture.rst
intern/: CMakeLists.txt
intern/SLIM/: CMakeLists.txt
intern/SLIM/ext/libigl_extract/: cotmatrix_entries.cpp  flip_avoiding_line_search.cpp
intern/SLIM/ext/libigl_extract/igl/: harmonic.cpp
intern/SLIM/src/: Slim.cpp  UVInitializer.cpp  UVInitializer.h  area_compensation.h  ceres_mesh_unwrapper.cpp  ceres_mesh_unwrapper.h  geometry_data_retrieval.cpp  geometry_data_retrieval.h  least_squares_relocator.cpp  slim_parametrizer.cpp  slim_parametrizer.h
intern/atomic/: atomic_ops.h
intern/atomic/intern/: atomic_ops_utils.h
intern/cycles/: CMakeLists.txt
intern/cycles/app/: CMakeLists.txt  cycles_server.cpp  cycles_standalone.cpp  cycles_xml.cpp
intern/cycles/blender/: CMakeLists.txt  blender_camera.cpp  blender_curves.cpp  blender_mesh.cpp  blender_object.cpp  blender_python.cpp  blender_session.cpp  blender_shader.cpp  blender_sync.cpp  blender_sync.h  blender_util.h  blender_volume.cpp
intern/cycles/bvh/: CMakeLists.txt  bvh.cpp  bvh.h  bvh_binning.cpp  bvh_binning.h  bvh_build.cpp  bvh_embree.cpp  bvh_embree.h  bvh_node.cpp  bvh_node.h  bvh_params.h  bvh_sort.cpp  bvh_sort.h  bvh_split.cpp  bvh_split.h  bvh_unaligned.cpp  (+1 more)
intern/decklink/: CMakeLists.txt  DeckLinkAPI.h
intern/ghost/: CMakeLists.txt  GHOST_C-api.h  GHOST_ISystem.h  GHOST_Types.h
intern/gpudirect/: CMakeLists.txt
intern/libmv/: CMakeLists.txt
intern/slim/: CMakeLists.txt  area_compensation.h  geometry_data_retrieval.h  least_squares_relocator.h  matrix_transfer.h  slim.h  slim_c_interface.h  slim_capi.h  slim_matrix_transfer.h  slim_parametrizer.h  uv_initializer.h
intern/slim/ext/libigl_extract/: massmatrix.cpp  min_quad_with_fixed.cpp  reorder.cpp  sort.cpp  volume.cpp
intern/slim/intern/: area_compensation.cpp  geometry_data_retrieval.cpp  geometry_data_retrieval.h  least_squares_relocator.cpp  least_squares_relocator.h  slim.cpp  slim.h  slim_capi.cpp  slim_parametrizer.cpp  slim_parametrizer.h  uv_initializer.cpp  uv_initializer.h
intern/slim/src/: Slim.h  area_compensation.cpp  geometry_data_retrieval.cpp  least_squares_relocator.cpp  slim.cpp  slim_C_interface.cpp  slim_C_interface.h  slim_c_interface.cpp  slim_c_interface.h  slim_parametrizer.cpp  uv_initializer.cpp
release/datafiles/: widget_export.py  workspaces.blend
source/blender/: CMakeLists.txt
source/blenderplayer/: CMakeLists.txt
source/creator/: CMakeLists.txt  creator.c  creator_args.c
tests/gtests/: CMakeLists.txt
tests/python/: CMakeLists.txt  bl_pyapi_datablock_idprop.py
(+1618 files in other folders)
